force-app/main/default/objects/Inspection_Findings__c/Inspection_Findings__c.object-meta.xml
<CustomObject>
    <description>When a annual state write up is completed and violations are found, they will be stored in this object.</description>
    <label>Inspection Findings</label>
    <nameField>
        <label>Inspection Findings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>