force-app/main/default/objects/Inspection_Findings__c/fields/Finding__c.field-meta.xml
<CustomField>
    <fullName>Finding__c</fullName>
    <label>Finding</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>