force-app/main/default/objects/Inspection_Findings__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <label>Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Covered by Contract</fullName>
            </value>
            <value>
                <fullName>Proposal Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>