force-app/main/default/objects/Inspection_Findings__c/fields/State_Inspection__c.field-meta.xml
<CustomField>
    <fullName>State_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Inspection</label>
    <referenceTo>State_Inspection__c</referenceTo>
    <relationshipLabel>Inspection Findings</relationshipLabel>
    <relationshipName>Inspection_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>